--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,19 @@
 
 /* Your CSS Code here. */
+table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+        td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: right;
+        }
+        th {
+            background-color: red;
+			 border: 1px solid #ddd;
+			text-align: left;
+        }
+.A {
+	text-align: left;
+}
